fixed footer div alignment

--- a/NationwideNannies/Content/style.css
+++ b/NationwideNannies/Content/style.css
@@ -2546,6 +2546,4 @@ h3 {
     font-weight: bold !important;
 }
 
-.container {
-    padding: 0;
-}
+
